<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/Caterory"
        android:background="@color/light_grey"
        android:gravity="center"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/inf_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"/>
    <TextView
        android:id="@+id/divisions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subdivisions"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inf_university"/>
    <TextView
        android:id="@+id/scholarship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/references"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divisions"/>
    <TextView
        android:id="@+id/univ_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulesUniversity"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scholarship"/>
    <TextView
        android:id="@+id/recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uHealth"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/univ_rules"/>
    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery"/>
    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questions"/>
    <TextView
        android:id="@+id/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/links"
        android:textSize="20sp"
        android:textColor="@color/bot"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings"/>
    <TextView
        android:id="@+id/links_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/links"/>
    <TextView
        android:id="@+id/links_VK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupVK"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/links_site"/>

</androidx.constraintlayout.widget.ConstraintLayout>